--- a/src/ui/qgsidentifyresultsbase.ui
+++ b/src/ui/qgsidentifyresultsbase.ui
@@ -76,9 +76,15 @@
         </widget>
        </item>
        <item>
-        <widget class="QTreeWidget" name="lstResults">
+        <widget class="QgsTreeWidget" name="lstResults">
          <property name="lineWidth">
           <number>2</number>
+         </property>
+         <property name="dragEnabled">
+          <bool>true</bool>
+         </property>
+         <property name="dragDropMode">
+          <enum>QAbstractItemView::DragOnly</enum>
          </property>
          <property name="alternatingRowColors">
           <bool>true</bool>
@@ -424,6 +430,12 @@
    <class>QwtPlot</class>
    <extends>QFrame</extends>
    <header>qwt_plot.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QgsTreeWidget</class>
+   <extends>QTreeWidget</extends>
+   <header>qgstreewidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
